--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,10 @@
 header {
-    position: absolute;
-    left: 35%;
-    top: 30%;
+    width: 100vw;
+    height: 100vh;
+}
+
+body{
+    margin: 0;
 }
 
 h1 {
